--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -20,5 +20,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
         
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build and Test with Maven
+      run: mvn -B package --file pom.xml -Dexcluded-tests.group=
