Added integration test. Added p6spy to product module.

--- a/product/pom.xml
+++ b/product/pom.xml
@@ -91,6 +91,18 @@
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 			<version>2.6.0</version>
 		</dependency>
+
+		<!-- ***************************************** -->
+		<!-- *** TESTING -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<!-- JDBC driver proxy intercepting all SQL calls, see spy.properties too -->
+			<groupId>com.github.gavlyukovskiy</groupId>
+			<artifactId>p6spy-spring-boot-starter</artifactId>
+			<scope>test</scope>  <!-- Only active during tests -->
+			<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
