Setup module for TDD

--- a/solar-panel-app/src/main/resources/application.properties
+++ b/solar-panel-app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=solar-panel
 #LOGGING
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
-##DATABASE
+#DATABASE
 #spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
