--- a/solar-panel-app/src/main/resources/application.properties
+++ b/solar-panel-app/src/main/resources/application.properties
@@ -7,13 +7,13 @@ spring.application.name=solar-panel
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #DATABASE
-#spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#
+spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 #SCHEMA AND DATA INITIALIZATION
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/schema.sql
