--- a/solar-panel-app/src/main/resources/application.properties
+++ b/solar-panel-app/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.application.name=solar-panel
 #LOGGING
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
+#TRACING
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
 #DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
 spring.datasource.username=postgres
@@ -18,9 +22,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/schema.sql
 #spring.sql.init.continue-on-error=true
-#
+
 ##CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
-#server.forward-headers-strategy=framework
-#
-##PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
-#springdoc.swagger-ui.enabled=false
+server.forward-headers-strategy=framework
