--- a/solar-panel-domain/pom.xml
+++ b/solar-panel-domain/pom.xml
@@ -11,6 +11,10 @@
 
 	<artifactId>solar-panel-domain</artifactId>
 
+	<properties>
+		<querydsl.version>5.1.0</querydsl.version>
+	</properties>
+
 	<dependencies>
 		<!-- ***************************************** -->
 		<!-- *** CORE -->
@@ -37,5 +41,18 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+			<version>${querydsl.version}</version>
+			<classifier>jakarta</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
+			<version>${querydsl.version}</version>
+			<classifier>jakarta</classifier>
+		</dependency>
 	</dependencies>
 </project>
