--- a/solar-panel-app/src/main/resources/application.properties
+++ b/solar-panel-app/src/main/resources/application.properties
@@ -14,7 +14,7 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
