Added validation tests for SearchSolarPanelRequest

--- a/solar-panel-app/pom.xml
+++ b/solar-panel-app/pom.xml
@@ -62,6 +62,17 @@
         </dependency>
 
         <!-- ***************************************** -->
+        <!-- *** VALIDATION -->
+        <!-- ***************************************** -->
+
+        <dependency>
+            <!-- @NotNull, @Min, @Max ... -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
+        <!-- ***************************************** -->
         <!-- *** OPENAPI -->
         <!-- ***************************************** -->
 
