Removed api from product endpoints

--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -13,7 +13,7 @@ spring:
         - id: product
           uri: http://hephaestus-product:8081
           predicates:
-            - Path=/api/v1/products/**, /v3/api-docs/product
+            - Path=/v1/products/**, /v3/api-docs/product
           filters:
             - RewritePath=/v3/api-docs/product, /v3/api-docs  # Forward to actual OpenAPI docs path
 
