--- a/api-gateway/src/main/resources/application-docker-github.yml
+++ b/api-gateway/src/main/resources/application-docker-github.yml
@@ -13,7 +13,7 @@ spring:
         - id: product
           uri: https://product.internal.kindmeadow-812476e6.northeurope.azurecontainerapps.io
           predicates:
-            - Path=/api/v1/products/**, /v3/api-docs/product
+            - Path=/v1/products/**, /v3/api-docs/product
           filters:
             - RewritePath=/v3/api-docs/product, /v3/api-docs  # Forward to actual OpenAPI docs path
 
