--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
         - id: product
           uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/products/**, /v3/api-docs/product
+            - Path=/v1/products/**, /v3/api-docs/product
           filters:
             - RewritePath=/v3/api-docs/product, /v3/api-docs  # Forward to actual OpenAPI docs path
 
