--- a/washing-machine-app/src/main/resources/application-docker.properties
+++ b/washing-machine-app/src/main/resources/application-docker.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://hephaestus-postgres:5432/washing_machine
 #WORKAROUND TO HAVE THE FEIGN CLIENT COMMUNICATE BASED ON SELECTED PROFILE
 #TODO: Find an easier fix. Avoid Eureka Server for now.
 #TODO: always update this if you modify the APIs of product microservice
-product.service.url=http://hephaestus-product:8081/api/v1/products
+product.service.url=http://hephaestus-product:8081/v1/products
