P6spy works without spy.properties

--- a/solar-panel-app/pom.xml
+++ b/solar-panel-app/pom.xml
@@ -82,7 +82,7 @@
         <!-- ***************************************** -->
 
         <dependency>
-            <!-- JDBC driver proxy intercepting all SQL calls, see spy.properties too -->
+            <!-- JDBC driver proxy intercepting all SQL calls -->
             <groupId>com.github.gavlyukovskiy</groupId>
             <artifactId>p6spy-spring-boot-starter</artifactId>
         </dependency>
